--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,6 +26,9 @@ android {
 }
 
 dependencies {
+    def room_version = "2.1.0-beta01"
+    def coroutines_version = '1.2.0'
+
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.3.0'
@@ -42,11 +45,19 @@ dependencies {
     implementation 'de.hdodenhof:circleimageview:2.1.0'
     implementation 'jp.wasabeef:recyclerview-animators:2.2.3'
 
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutines_version"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines_version"
 
-    implementation "androidx.lifecycle:lifecycle-extensions:2.0.0-alpha1"
-    kapt "androidx.lifecycle:lifecycle-compiler:2.0.0-alpha1"
-    implementation "androidx.room:room-runtime:2.0.0-alpha1"
-    kapt "androidx.room:room-compiler:2.0.0-alpha1"
+    //coroutines
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.2.0-alpha04'
+
+    implementation "androidx.room:room-runtime:$room_version"
+    implementation "androidx.room:room-ktx:$room_version"
+    kapt "androidx.room:room-compiler:$room_version"
+
+    debugImplementation 'com.amitshekhar.android:debug-db:1.0.6'
+
+    debugImplementation 'com.amitshekhar.android:debug-db-encrypt:1.0.6'
 
 
 }
