--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,7 +43,7 @@ dependencies {
     implementation 'com.android.support:design:29.0.1'
     implementation 'com.squareup.picasso:picasso:2.5.2'
     implementation 'de.hdodenhof:circleimageview:2.1.0'
-    implementation 'jp.wasabeef:recyclerview-animators:2.2.3'
+//    implementation 'jp.wasabeef:recyclerview-animators:2.2.3' // thư viện làm mờ recycleView
 
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutines_version"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines_version"
@@ -56,7 +56,6 @@ dependencies {
     kapt "androidx.room:room-compiler:$room_version"
 
     debugImplementation 'com.amitshekhar.android:debug-db:1.0.6'
-
     debugImplementation 'com.amitshekhar.android:debug-db-encrypt:1.0.6'
 
 
